<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_counter"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:backgroundTint="#D6D6D6"
        android:textColor="@color/black"
        android:id="@+id/btn_ADD"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_ADD"
        android:textAllCaps="false" />

    <Button
        android:backgroundTint="#D6D6D6"
        android:textColor="@color/black"
        android:id="@+id/btn_REDUCE"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="0px"
        android:text="@string/btn_REDUCE"
        android:textAllCaps="false" />

    <Button
        android:backgroundTint="#D6D6D6"
        android:textColor="@color/black"
        android:id="@+id/btn_CLEAR"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="0px"
        android:text="@string/btn_CLEAR"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textview_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:text="@string/counterText"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textview_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:text="@string/counterNum"
            android:textAllCaps="false"
            android:textColor="#FF0000"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>